force-app/main/default/objects/Account/fields/AccNumAutoGenerate__c.field-meta.xml
<CustomField>
    <fullName>AccNumAutoGenerate__c</fullName>
    <description>Auto Generate Account Number and set it on the Standard Account Number field</description>
    <displayFormat>ACC-{YY}{MM}{DD}-{000}</displayFormat>
    <externalId>true</externalId>
    <label>AccNumAutoGenerate</label>
    <type>AutoNumber</type>
</CustomField>