force-app/main/default/objects/Account/fields/Additional_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email__c</fullName>
    <label>Additional Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>