force-app/main/default/objects/Account/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <description>Billing Email from Converted Lead</description>
    <label>Billing Email</label>
    <type>Email</type>
</CustomField>