force-app/main/default/objects/Account/fields/Billing_Fax__c.field-meta.xml
<CustomField>
    <fullName>Billing_Fax__c</fullName>
    <label>Billing Fax</label>
    <type>Phone</type>
</CustomField>