force-app/main/default/objects/Account/fields/Billing_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Mobile_Number__c</fullName>
    <label>Billing Mobile Number</label>
    <type>Phone</type>
</CustomField>