force-app/main/default/objects/Account/fields/Gate_Access_Code__c.field-meta.xml
<CustomField>
    <fullName>Gate_Access_Code__c</fullName>
    <label>Gate/Access Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>