force-app/main/default/objects/Account/fields/Last_Serviced__c.field-meta.xml
<CustomField>
    <fullName>Last_Serviced__c</fullName>
    <label>Last Serviced</label>
    <type>Date</type>
</CustomField>