force-app/main/default/objects/Account/fields/Location_Check_in_Time__c.field-meta.xml
<CustomField>
    <fullName>Location_Check_in_Time__c</fullName>
    <label>Location Check-in Time (Mins)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>