force-app/main/default/objects/Account/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <label>Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>