force-app/main/default/objects/Account/fields/Notification_Method__c.field-meta.xml
<CustomField>
    <fullName>Notification_Method__c</fullName>
    <label>Notification Method</label>
    <type>TextArea</type>
</CustomField>