force-app/main/default/objects/Account/fields/Number_of_GRDs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_GRDs__c</fullName>
    <description>Note: Keeping Field API same to avoid component changes</description>
    <label>Number of GRDs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>