force-app/main/default/objects/Account/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <description>Used to associate the Account with specific QuickBooks Terms (e.g., Net 30, Net 7)</description>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due on receipt</fullName>
            </value>
            <value>
                <fullName>Net 7</fullName>
            </value>
            <value>
                <fullName>Net 10</fullName>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>