force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms NOT IN USE</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>