force-app/main/default/objects/Account/fields/Primary_Time_Window_From__c.field-meta.xml
<CustomField>
    <fullName>Primary_Time_Window_From__c</fullName>
    <label>Primary Time Window From</label>
    <type>Time</type>
</CustomField>