force-app/main/default/objects/Account/fields/Secondary_Time_Window__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Time_Window__c</fullName>
    <label>Secondary Time Window</label>
    <length>100</length>
    <type>Text</type>
</CustomField>