force-app/main/default/objects/Account/fields/Secondary_Time_Window_To__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Time_Window_To__c</fullName>
    <label>Secondary Time Window To</label>
    <type>Time</type>
</CustomField>