force-app/main/default/objects/Account/fields/Service_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Location_Id__c</fullName>
    <externalId>true</externalId>
    <label>Service Location Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>