force-app/main/default/objects/Account/fields/Serviceable__c.field-meta.xml
<CustomField>
    <fullName>Serviceable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Serviceable</label>
    <type>Checkbox</type>
</CustomField>