force-app/main/default/objects/Account/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>HYD</fullName>
            </value>
            <value>
                <fullName>INT</fullName>
            </value>
            <value>
                <fullName>UCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>