force-app/main/default/objects/Account/validationRules/Validate_DoorCode_Integer.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_DoorCode_Integer</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
NOT(ISBLANK(Door_Code__c )),
OR(
NOT(ISNUMBER(Door_Code__c )),
FIND(&quot;.&quot;, Door_Code__c ) &gt; 0
)
))</errorConditionFormula>
    <errorMessage>Please ensure the Door Code Field contain only Numbers.</errorMessage>
</ValidationRule>