force-app/main/default/objects/Account/validationRules/Validate_Shipping_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Shipping_Address</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED(ShippingStreet ), ISBLANK(  ShippingStreet ),
ISCHANGED(ShippingCity ), ISBLANK(  ShippingCity ),
ISCHANGED(ShippingState ), ISBLANK(  ShippingState ),
ISCHANGED(ShippingPostalCode ), ISBLANK(  ShippingPostalCode ),
ISCHANGED(ShippingCountry ), ISBLANK(  ShippingCountry ) )</errorConditionFormula>
    <errorMessage>Please provide Shipping Address information</errorMessage>
</ValidationRule>