force-app/main/default/objects/Account/listViews/BulkActionAccount.listView-meta.xml
<ListView>
    <fullName>BulkActionAccount</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Number_of_GRDs__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>Last_Serviced__c</columns>
    <columns>Service_Location_Id__c</columns>
    <columns>Skills__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.SALES</columns>
    <columns>Volume__c</columns>
    <columns>Customer_ID__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Number_of_GRDs__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </filters>
    <label>BulkActionAccount</label>
</ListView>