force-app/main/default/objects/Account/listViews/Imported_19Dec2025.listView-meta.xml
<ListView>
    <fullName>Imported_19Dec2025</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>12/18/2025 10:04 AM</value>
    </filters>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>12/19/2025 10:04 AM</value>
    </filters>
    <label>Imported 19Dec2025</label>
</ListView>